@@ -36,8 +36,6 @@ import java.util.List;
  * <code>FetchImpl</code> information to indicate the locations of intermediate data.
  */
 public class FetchImpl implements ProtoObject<TajoWorkerProtocol.FetchProto>, Cloneable {
-  private TajoWorkerProtocol.FetchProto.Builder builder = null;
-
   private QueryUnit.PullHost host;             // The pull server host information
   private TajoWorkerProtocol.ShuffleType type; // hash or range partition method.
   private ExecutionBlockId executionBlockId;   // The executionBlock id
@@ -53,7 +51,6 @@ public class FetchImpl implements ProtoObject<TajoWorkerProtocol.FetchProto>, Cl
   private long length = -1;
 
   public FetchImpl() {
-    builder = TajoWorkerProtocol.FetchProto.newBuilder();
     taskIds = new ArrayList<Integer>();
     attemptIds = new ArrayList<Integer>();
   }
@@ -108,14 +105,14 @@ public class FetchImpl implements ProtoObject<TajoWorkerProtocol.FetchProto>, Cl
 
   @Override
   public int hashCode() {
-    return Objects.hashCode(host, type, executionBlockId, partitionId, name, rangeParams, hasNext, taskIds, attemptIds);
+    return Objects.hashCode(host, type, executionBlockId, partitionId, name, rangeParams,
+        hasNext, taskIds, attemptIds, offset, length);
   }
 
   @Override
   public TajoWorkerProtocol.FetchProto getProto() {
-    if (builder == null) {
-      builder = TajoWorkerProtocol.FetchProto.newBuilder();
-    }
+    TajoWorkerProtocol.FetchProto.Builder builder = TajoWorkerProtocol.FetchProto.newBuilder();
+
     builder.setHost(host.getHost());
     builder.setPort(host.getPort());
     builder.setType(type);
@@ -235,7 +232,6 @@ public class FetchImpl implements ProtoObject<TajoWorkerProtocol.FetchProto>, Cl
   public FetchImpl clone() throws CloneNotSupportedException {
     FetchImpl newFetchImpl = (FetchImpl) super.clone();
 
-    newFetchImpl.builder = TajoWorkerProtocol.FetchProto.newBuilder();
     newFetchImpl.host = host.clone();
     newFetchImpl.type = type;
     newFetchImpl.executionBlockId = executionBlockId;
@@ -273,6 +269,8 @@ public class FetchImpl implements ProtoObject<TajoWorkerProtocol.FetchProto>, Cl
         TUtil.checkEquals(name, fetch.name) &&
         TUtil.checkEquals(rangeParams, fetch.rangeParams) &&
         TUtil.checkEquals(taskIds, fetch.taskIds) &&
-        TUtil.checkEquals(type, fetch.type);
+        TUtil.checkEquals(type, fetch.type) &&
+        TUtil.checkEquals(offset, fetch.offset) &&
+        TUtil.checkEquals(length, fetch.length);
   }
 }
