@@ -161,7 +161,10 @@ Release 0.9.0 - unreleased
 
   BUG FIXES
 
-    TAJO-1101: Broadcast join with a zero-length file table returns wrong result data.(Hyoungjun Kim)
+    TAJO-1103: Insert clause of partitioned table loses some FetchImpls. (jinho)
+
+    TAJO-1101: Broadcast join with a zero-length file table returns wrong result data.
+    (Hyoungjun Kim)
 
     TAJO-1067: INSERT OVERWRITE INTO should not remove all partitions. (jaehwa)
 
